# Creator

./: Readme.md
backend/: .env  package-lock.json  package.json  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: media.py  pages.py  root.py
backend/app/core/: config.py  psql_engine.py
frontend/: .env  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/banner/: banner.jpg:Zone.Identifier
frontend/public/icon/: fb.svg:Zone.Identifier  ig.svg:Zone.Identifier  yt.svg:Zone.Identifier
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Footer.tsx  Header.tsx  footer.css  header.css
frontend/src/hooks/: useAutoScrollSlider.ts
frontend/src/pages/: BookingForm.tsx  Home.tsx  bookingForm.css  home.css
